@@ -1,5 +1,6 @@
 1.1.7
  * fix wrong leveled compaction progress calculation (CASSANDRA-4807)
+ * add a close() method to CRAR to prevent leaking file descriptors (CASSANDRA-4820)
 
 1.1.6
  * Wait for writes on synchronous read digest mismatch (CASSANDRA-4792)
